Longhorn/03-QuickTest.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: quick-storage-test
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: demo-app
  namespace: quick-storage-test
  labels:
    app: demo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-app
  template:
    metadata:
      labels:
        app: demo-app
    spec:
      volumes:
        - name: lh-storage-volume
          persistentVolumeClaim:
            claimName: lh-pvc-1
      containers:
        - name: demo-app
          image: fabiofernandes/nginx
          volumeMounts:
            - name: lh-storage-volume
              mountPath: /usr/share/nginx/html
